# duckdb-sqlm

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: CMakeLists.txt  main.cpp  mutation_generator.cpp  sqlmud_extension.cpp  test_data.sql
src/include/: data.hpp  mutation_generator.hpp  sqlmud_extension.hpp
test/sql/: sqlmud.test
